appId: http://localhost:8081
tags:
  - TASK-3.19
---
- launchApp
- assertVisible: "Galerie"
- tapOn:
    id: "picture-card"
    index: 0
- assertVisible:
    text: ".+"
